--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,6 @@
+<h1>New Task</h1>
+<%= render "partials/nav" %>
+
 <%= form_for(Task.new) do |f| %>
 <%= f.text_field :task, placeholder: "New Task" %><br />
 <%= f.text_field :author, placeholder: "Author" %><br />
